<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="bottom|center|right"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.60"
        android:gravity="center_horizontal"
        android:text="Peppernote"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="55sp"
        android:typeface="sans" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/serversListSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addServerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:state_enabled="false"
        android:text="@string/add_server" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/sign_in" />

</LinearLayout>