<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/headerShowNoteLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:animationCache="true"
        android:gravity="left"
        android:orientation="horizontal" 
        android:background="@color/red">

        <TextView
            android:id="@+id/noteTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Note title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/noteContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/showNoteMenuLinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headerShowNoteLinearLayout"
        android:ems="10"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:inputType="textMultiLine|none" >

        <requestFocus />
    </EditText>
    
	<RelativeLayout
        android:id="@+id/emptyNoteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@id/headerShowNoteLinearLayout"
        android:layout_above="@+id/showNoteMenuLinearLayout"
        android:layout_centerHorizontal="true"        
        android:visibility="gone" >        
        
        <TextView
            android:id="@+id/emptyNoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/empty_notes_list"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="@color/black"/>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/showNoteMenuLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/red" >

        <Button
            android:id="@+id/editNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/deleteNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

</RelativeLayout>